Formatting fixes Added a menu with options for language, hours, shopping cart. Fixed footer positioning. Added drop shadow for button. Made spacing slightly better throughout the page.

--- a/styling.css
+++ b/styling.css
@@ -8,10 +8,27 @@ a {
     font-weight: bold;
 }
 
+header {
+    background-color: white;
+    padding: 10px 0;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    padding-right: 40px;
+
+}
+
 footer {
-    size: 50%;
-    margin-left: auto;
-    margin-right: auto;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   position: fixed;
+   bottom: 0;
+   width: 100%;
+   background-color: white;
 }
 
 a:hover {
@@ -29,7 +46,21 @@ a:hover {
     text-align: center;
 }
 
+#mainlogo {
+    padding-top: 50px;
+}
+
+#addresses {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+#addresses p {
+    margin-bottom: 20px;
+}
+
 button {
+    margin: 30px;
     background-color: #C3A88F;
     border-radius: 16px;
     width: 410px;
@@ -40,4 +71,10 @@ button {
     font-weight: bold;
     font-size: 40px;
     color: white;
+    box-shadow: 0px 6px 6px 0px #767676;
+}
+
+button:hover {
+    background-color: #96663B;
+    box-shadow: none;
 }
